--- a/css/style-new.css
+++ b/css/style-new.css
@@ -56,8 +56,7 @@ body{ font-family:microsoft yahei; font-size:14px; background:#edeae1; color:#33
 
 /*推荐浏览器*/
 .linetit{ height:30px; line-height:30px; padding:10px 0; width:1000px; margin:auto}
-.linetit.linetit4{ background:url(../images/tit_04.png)no-repeat 0 center}
-.linetit.linetit4 span{ margin: 0 0 0 150px;}
+
 .browserbox{ width:1000px; margin:0px auto 0; overflow:hidden;background:#fff; padding:10px 0;}
 .browserbox ul{ margin:0 0 0 0px; }
 .browserbox ul li{ width:155px; height:40px; line-height:40px; border:1px solid #ddd; background:#edeae1; box-sizing:border-box ;float:left; text-align:center; margin:0px 0 0 10px;}
@@ -107,7 +106,7 @@ body{ font-family:microsoft yahei; font-size:14px; background:#edeae1; color:#33
 #tabcontent .btn_word{ float:right; width:390px; margin:-375px -75px 0 0} 
 #tabcontent .btn_word h1{ font-weight:normal; color:#01184c}
 #tabcontent .btn_word p{ line-height:24px; margin:10px 0 0 0}
-#tabcontent .btn_word img{margin:0px 30px 0 0; width:140px; height:140px;}
+#tabcontent .btn_word img{margin:0px 30px 0 0; height:140px;}
 #tabcontent .btn_word .btn_vipp{ font-size:16px; text-align:center; color:#FF0004; margin: 0px 0 0 -60px;}
 
 /*底部*/
